--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Nick Zanobini"
   avatar           : "/assets/images/nick_headshot.jpg" 
-  bio              : "I am an amazing person."
+  bio              : "It takes half your life before you discover life is a do-it-yourself project."
   location         : "Los Angeles, CA"
   email            :
   uri              :
