--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ main:
   - title: "Projects"
     url: /portfolio/
   - title: "Posts"
-    url: /posts/
+    url: /year-archive/
   - title: "Contact"
     url: /contact/
