feat: chore: Added email to profile

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   avatar           : "/assets/images/nick_headshot.jpg" 
   bio              : "It takes half your life before you discover life is a do-it-yourself project."
   location         : "Los Angeles, CA"
-  email            :
+  email            : "nickzanobini@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
