feat: Added new post

--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ author:
   name             : "Nick Zanobini"
   avatar           : "/assets/images/nick_headshot.jpg" 
   bio              : "It takes half your life before you discover life is a do-it-yourself project."
-  location         : "Los Angeles, CA"
-  email            : "nickzanobini@gmail.com"
+  location         : "Davis, CA"
+  email            : "nickzanobini5@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
